Fix ZGC.